--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
-spring.application.name=spring_data_jpa
+# MySQL
+spring.datasource.url=jdbc:mysql://localhost:3307/basepruebanueva
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#Esto solo en desarrollo no en produccion porque esto sirve para ver las consultas que se van generando.
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#Si queremos inicializar la base de datos, configurar la capa de datos.
+#spring.sql.init.mode=always
+#spring.jpa.defer-datasource-initialization=true
+
+# PostgreSQL
+#spring.datasource.url=jdbc:postgresql://localhost:5432/spring_data_jpa
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
